# Task_9_Sqlite

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
api/: __init__.py  race_info.db
api/ver_1/: api_ver_1.py
api/ver_1/docs/: template.yml
api/ver_1/docs/Drivers/: get.yml
api/ver_2/: api.py  api_ver_2.py  application.py  config.py  exceptions.py  init_database.py  utils.py
api/ver_2/db/: create_db.py  init_database.py  models.py  race_info.db
api/ver_2/docs/: template.yml
api/ver_2/docs/Drivers/: get.yml
api_report/: __init__.py  app.py  config.py  db_utils.py  insert_records_to_db.py  models.py  race_info.db  schemas.py
api_report/db/: exceptions.py  insert_records.py  insert_records_to_db.py  models.py  utils.py
api_report/resources/: driver.py  query_string_parser.py  race.py  utils.py
api_report/resources/docs/: template.yml
api_report/resources/docs/Driver/: get.yml
api_report/resources/docs/RaceReport/: get.yml
db/: create_db.py  models.py
src/api_report/: __main__.py  app.py  config.py  race_info.db
src/api_report/db/: insert_records.py  models.py
src/api_report/resources/: driver.py  handlers.py  query_string_parser.py  race.py
tests/: conftest.py
tests/functional_tests/: test_api_report.py  test_api_ver_1.py
tests/unit_tests/: test_insert_records.py
