[metadata]
name = Api Race report
version = 0.1.0
author = VanderSVan
author_email = shikhanovivan@gmail.com
description = Rest Api to provide race report
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker = https://github.com/VanderSVan/Task_9_Sqlite
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    Flask = >=2.0, <2.1
    Flask-RESTful==0.3.9
    flasgger==0.9.5
    peewee = >=3.14, <3.15
    xmltodict==0.12.0
    python_requires = >=3.10, <3.11

[options.extras_require]


[options.packages.find]
where = src